# rzu

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  clang-format.sh  docker-compose.yml  generateGuards.py  generateGuards.sh  gitall.sh  run_tests.bat  run_tests.ps1  run_tests.sh  setversion.sh
rzauctionmonitor/: CMakeLists.txt
rzauctionmonitor/lib/: AuctionCommonWriter.cpp  AuctionCommonWriter.h  AuctionComplexData.cpp  AuctionComplexData.h  AuctionComplexDiffWriter.cpp  AuctionComplexDiffWriter.h  AuctionData.cpp  AuctionData.h  AuctionFile.h  AuctionGenericWriter.h  AuctionSimpleData.cpp  AuctionSimpleData.h  AuctionSimpleDiffWriter.cpp  AuctionSimpleDiffWriter.h  AuctionSimpleFile.h  AuctionUid.h  AuctionWriter.cpp  AuctionWriter.h  CMakeLists.txt  CategoryTimeManager.cpp  CategoryTimeManager.h  ClassCounter.cpp  Extern.h  IAuctionData.h
rzauctionmonitor/lib/flat_map/: flat_map.hpp
rzauctionmonitor/parser/: AuctionSQLWriter.cpp  AuctionSQLWriter.h  CMakeLists.txt  auctions_aggregator.cpp  auctions_diff.cpp  auctions_dump.cpp  auctions_to_json.cpp  auctions_to_sql - Copie.cpp  auctions_to_sql.cpp  auctions_upgrade.cpp
rzauctionmonitor/parser/aggregator/: Aggregator.cpp  Aggregator.h  AuctionParser.cpp  AuctionParser.h  CMakeLists.txt  GlobalConfig.h  HttpClientSession.cpp  HttpClientSession.h  main.cpp
rzauctionmonitor/parser/monitor/: AuctionParser.cpp  AuctionParser.h  CMakeLists.txt  Extern.h  IParser.h  IPipeline.cpp  IPipeline.h
rzauctionmonitor/parser/monitoring_tools/: CMakeLists.txt
rzauctionmonitor/src/: AuctionManager.cpp  AuctionManager.h  AuctionWorker.cpp  AuctionWorker.h  AuthSession.cpp  AuthSession.h  CMakeLists.txt  ClassCounter.cpp  GameSession.cpp  GameSession.h  GlobalConfig.cpp  GlobalConfig.h  TS_CS_AUCTION_SEARCH.h  TS_SC_AUCTION_SEARCH.h  main.cpp
rzauctionmonitor/test/: CMakeLists.txt  GlobalConfig.h  auction_full_mode.cpp  auction_simple.cpp  main.cpp
rzauth/: CMakeLists.txt  README.md
rzauth/src/: BanManager.cpp  BanManager.h  CMakeLists.txt  ClassCounter.cpp  ClientData.cpp  ClientData.h  ClientInfo.cpp  ClientInfo.h  ConfigInfo.h  DB_Account.cpp  DB_Account.h  DesPasswordCipher.cpp  DesPasswordCipher.h  GlobalConfig.cpp  GlobalConfig.h  RappelzServer.cpp  RappelzServer.h  RappelzSession.cpp  RappelzSession.h  ServerInfo.cpp  ServerInfo.h  ServersManager.cpp  ServersManager.h  SocketSession.cpp  SocketSession.h  TelnetSession.cpp  TelnetSession.h  main.cpp  metadata.rc.in
rzauth/src/AdminServer/: AdminInterface.cpp  AdminInterface.h  CommandRunner.cpp  CommandRunner.h  TelnetSession.cpp  TelnetSession.h
rzauth/src/AuthServer/: BillingInterface.cpp  BillingInterface.h  ClientData.cpp  ClientData.h  ClientInfo.cpp  ClientInfo.h  ClientList.cpp  ClientList.h  ClientSession.cpp  ClientSession.h  DB_Account.cpp  DB_Account.h  DB_SecurityNoCheck.cpp  DB_SecurityNoCheck.h  DB_UpdateLastServerIdx.cpp  DB_UpdateLastServerIdx.h  DbConnectionPool.cpp  DbConnectionPool.h  DesPasswordCipher.cpp  DesPasswordCipher.h  GameData.cpp  GameData.h  GameServerSession.cpp  GameServerSession.h  LogServerClient.cpp  LogServerClient.h  ServerInfo.cpp  ServerInfo.h
rzauth/src/Upload/: ClientInfo.cpp  ClientInfo.h  (+2 more)
rzauth/test/: CMakeLists.txt  Environment.cpp  Environment.h  main.cpp
rzbenchauth/: CMakeLists.txt  PlayerCountMonitor.cpp  PlayerCountMonitor.h  main.cpp
rzbenchauth/src/: Account.h  AuthBenchmark.cpp  AuthBenchmark.h  Authentication.cpp  Authentication.h  BenchmarkAuthSession.cpp  BenchmarkAuthSession.h  CMakeLists.txt  DESPasswordCipher.cpp  DESPasswordCipher.h  DesPasswordCipher.h  PlayerCountMonitor.cpp  PlayerCountMonitor.h  TimingFunctions.h  create_test_accounts.sql  create_test_accounts_unrolled.sql  main.cpp
rzfilter/: CMakeLists.txt
rzfilter/filter/: AuthPacketConverterFilter.cpp  AuthPacketConverterFilter.h  CMakeLists.txt  GamePacketConverterFilter.cpp  GamePacketConverterFilter.h  PacketConverterFilter.cpp  PacketConverterFilter.h  PacketFilter.cpp  PacketFilter.h
rzfilter/include/: CMakeLists.txt  IFilter.h  IFilterEndpoint.h
rzfilter/src/: AdminInterface.cpp  AdminInterface.h  AuthClientSession.cpp  AuthClientSession.h  CMakeLists.txt  ClassCounter.cpp  ClientSession.cpp  ClientSession.h  EndpointProxy.cpp  EndpointProxy.h  FilterEndpoint.cpp  FilterEndpoint.h  FilterManager.cpp  FilterManager.h  FilterProxy.cpp  FilterProxy.h  GameClientSession.cpp  GameClientSession.h  GameClientSessionManager.cpp  GameClientSessionManager.h  GlobalConfig.cpp  GlobalConfig.h  IFilter.h  IFilterEndpoint.h  PacketFilter.cpp  PacketFilter.h  PacketStructsName.h  ServerSession.cpp  ServerSession.h  main.cpp
rzfilter/test/: CMakeLists.txt  Environment.cpp  GlobalConfig.cpp  GlobalConfig.h  Ping.cpp  main.cpp
rzgame/: CMakeLists.txt
rzgame/src/: AuthServerSession.cpp  AuthServerSession.h  CMakeLists.txt  ClassCounter.cpp  ClientSession.cpp  ClientSession.h  ConnectionHandler.h  GameTypes.h  GlobalConfig.cpp  GlobalConfig.h  main.cpp  metadata.rc.in
rzgamereconnect/test/: CMakeLists.txt  Environment.cpp  Environment.h
rzlog/: CMakeLists.txt
rzlog/src/: CMakeLists.txt  ClassCounter.cpp  GlobalConfig.cpp  GlobalConfig.h  main.cpp  metadata.rc.in
rztest/: CMakeLists.txt
rztest/src/: CMakeLists.txt  ClassCounter.cpp  Extern.h  GlobalConfig.cpp  GlobalConfig.h  RunTests.cpp  RunTests.h  RzTest.cpp  RzTest.h  RzuGtestPrettyUnitTestResultPrinter.cpp  RzuGtestPrettyUnitTestResultPrinter.h  Terminator.cpp  Terminator.h  TestConnectionChannel.cpp  TestConnectionChannel.h  TestEnvironment.cpp  TestEnvironment.h  TestGlobalConfig.cpp  TestGlobalConfig.h  TestPacketServer.cpp  TestPacketServer.h  TestPacketSession.cpp  TestPacketSession.h  WaitConnectionOpen.cpp  WaitConnectionOpen.h  main.cpp
rztest/terminator/: CMakeLists.txt  main.cpp
rztestgs/: .gitignore  CMakeLists.txt  PlayerCountMonitor.cpp  PlayerCountMonitor.h  RappelzPlayerCount.pro  main.cpp
rztestgs/src/: CMakeLists.txt  PlayerCountMonitor.cpp  PlayerCountMonitor.h  TestGs.cpp  TestGs.h  main.cpp
(+629 files in other folders)
