cmake_minimum_required(VERSION 2.8)

file(GLOB SOURCE_FILES *.cpp *.h)

add_executable(${TARGET_NAME} ${SOURCE_FILES})
target_link_libraries(${TARGET_NAME} RappelzLib uv)
if(WIN32)
if ( "${CMAKE_SIZEOF_VOID_P}" EQUAL "8" )
	target_link_libraries(${TARGET_NAME} D:/Programmes/Programmation/libraries/OpenSSL-x64/lib/libeay32.lib)
else()
	target_link_libraries(${TARGET_NAME} D:/Programmes/Programmation/libraries/OpenSSL/lib/libeay32.lib)
endif()
	target_link_libraries(${TARGET_NAME} odbc32 psapi)
	include_directories(D:/Programmes/Programmation/libraries/OpenSSL/include)
else()
	target_link_libraries(${TARGET_NAME} crypto odbc)
	target_link_libraries(${TARGET_NAME} m)
	target_link_libraries(${TARGET_NAME} pthread)
	target_link_libraries(${TARGET_NAME} dl)
	target_link_libraries(${TARGET_NAME} rt)
endif()
install(TARGETS ${TARGET_NAME} DESTINATION ./)
